<resources>
    <string name="app_name">TennisKataApp</string>
    <string name="welcome_title">Welcome to Tennis Kata</string>
    <string name="instructions_message">Click on one of the player\'s button to increase their points</string>
    <string name="score_label">Score</string>
    <string name="start_new_game">Start new game</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_one">Serena</string>
    <string name="player_two">Venus</string>
    <string name="player_one_label">Player One</string>
    <string name="player_two_label">Player Two</string>
    <string name="save">Save</string>
    <string name="instructions_players">Enter two players name</string>
    <string name="instructions_game">Press on a player name to make this player score</string>
</resources>
