<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayersFragment">

    <TextView
        android:id="@+id/tv_instructions_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/instructions_players"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_player_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_one_label"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_instructions_players" />

    <EditText
        android:id="@+id/ed_player_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="8"
        android:lines="1"
        android:text="Venus"
        app:layout_constraintEnd_toEndOf="@+id/label_player_one"
        app:layout_constraintStart_toStartOf="@+id/label_player_one"
        app:layout_constraintTop_toBottomOf="@+id/label_player_one"
        tools:hint="@string/player_one" />

    <TextView
        android:id="@+id/label_player_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_two_label"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_player_one" />

    <EditText
        android:id="@+id/ed_player_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:lines="1"
        android:ems="8"
        android:text="Serena"
        app:layout_constraintEnd_toEndOf="@+id/label_player_two"
        app:layout_constraintStart_toStartOf="@+id/label_player_two"
        app:layout_constraintTop_toBottomOf="@+id/label_player_two"
        tools:hint="@string/player_two" />

    <Button
        android:id="@+id/btn_save_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>